# Super-Aerostructural-Optimizer

./: # Multi-Stage Aerostructural Optimizatio.prompt.md  .gitignore  AGENTS.md  CANTILEVER_BEAM_EXPLANATION.md  COMPLETE_MDO_PIPELINE.md  COMPOSITE_CLT_OPTIMIZATION.md  EXECUTION_REPORT_2025-12-13.md  LICENSE  MODERN_FRONTIER_OF_COMPUTATIONAL_AEROSTRUCTURAL_OPTIMIZATION.md  PHYSICSNEMO_AIRFOIL_CFD.md  PHYSICS_FUNDAMENTALS_EXPLAINED.md  PROCESS_FLOW_EXPLAINED.md  README.md  README_Build1.md  codex_work_23_2_26.md  nvidia_physicsnemo_airfoil_trainer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  uiuc_airfoil_database.json  uiuc_airfoil_database.py  wing_3d_aerostructural_optimization.py
Super_Aerostructural_Optimizer/: __init__.py
aerostructural_su2_mystran/: aero_shape_optimization.py  aero_shape_true_optimization.py  build_multizone_wingbox.py  build_wing_shell.py  doe_su2_refine.py  doe_su2_refine_rank5.py  doe_vlm_screening.py  fsi_transfer.py  generate_naca0012_mesh.py  generate_wing_mesh.py  plot_corrected_interpolation.py  plot_corrected_shape_sweep.py  plot_doe_refinement.py  plot_doe_vlm.py  plot_long_convergence.py  plot_mystran_and_convergence.py  plot_production_run.py  production_run.py  production_run_corrected.py  production_run_optimized.py  production_run_realshape.py  render_corrected_geometry.py  render_optimized_final.py  render_su2_surface_csv.py  render_su2_wing.py  vam_fsd_resize.py
agent_hq/: README.md  run_agent.ps1  run_agent.py
config/: default_config.yaml  piml_aerostruct_run.yaml  quick_bc_test.yaml  (+2 more)
(+169 files in other folders)
